WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89822
[chromium] Return has value, in function returning void
https://bugs.webkit.org/show_bug.cgi?id=89822
Summary
[chromium] Return has value, in function returning void
Kwang Yul Seo
Reported
2012-06-23 22:13:30 PDT
A followup for
r121091
.
Attachments
Patch
(3.75 KB, patch)
2012-06-23 22:17 PDT
,
Kwang Yul Seo
abarth
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kwang Yul Seo
Comment 1
2012-06-23 22:17:04 PDT
Created
attachment 149184
[details]
Patch
WebKit Review Bot
Comment 2
2012-06-23 22:23:40 PDT
Comment on
attachment 149184
[details]
Patch Rejecting
attachment 149184
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebKit/chromium/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/13029798
Adam Barth
Comment 3
2012-06-23 22:25:27 PDT
Comment on
attachment 149184
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=149184&action=review
> Source/WebKit/chromium/ChangeLog:6 > + A followup for
r121091
.
You need to leave in the "Reviewed by NOBODY (OOPS!)" line in the ChangeLog so the tools know to fill in the reviewer.
Kwang Yul Seo
Comment 4
2012-06-23 22:26:57 PDT
(In reply to
comment #3
)
> (From update of
attachment 149184
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=149184&action=review
> > > Source/WebKit/chromium/ChangeLog:6 > > + A followup for
r121091
. > > You need to leave in the "Reviewed by NOBODY (OOPS!)" line in the ChangeLog so the tools know to fill in the reviewer.
Oops. I removed the line by accident. I will commit this patch manually after adding you as a reviewer. Thanks.
Kwang Yul Seo
Comment 5
2012-06-23 22:29:47 PDT
Committed
r121108
: <
http://trac.webkit.org/changeset/121108
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug