[chromium] Return has value, in function returning void https://bugs.webkit.org/show_bug.cgi?id=89822

Reviewed by Adam Barth.

A followup for r121091.

* src/WebHistoryItem.cpp:
(WebKit::WebHistoryItem::setPageScaleFactor):
* src/WebImageLayer.cpp:
(WebKit::WebImageLayer::setBitmap):
* src/WebLayer.cpp:
(WebKit::WebLayer::setMaskLayer):
* src/WebOptionElement.cpp:
(WebKit::WebOptionElement::setValue):
(WebKit::WebOptionElement::setDefaultSelected):

git-svn-id: svn://svn.chromium.org/blink/trunk@121108 bbb929c8-8fbe-4397-9dbb-9b2b20218538