third_party/WebKit/Source/WebKit/chromium/src/WebHistoryItem.cpp
@@ -174,7 +174,7 @@ float WebHistoryItem::pageScaleFactor() const
 void WebHistoryItem::setPageScaleFactor(float scale)
 {
     ensureMutable();
-    return m_private->setPageScaleFactor(scale);
+    m_private->setPageScaleFactor(scale);
 }
 
 bool WebHistoryItem::isTargetItem() const
