third_party/WebKit/Source/WebKit/chromium/src/WebImageLayer.cpp
@@ -43,7 +43,7 @@ WebImageLayer::WebImageLayer(PassRefPtr<WebCore::ImageLayerChromium> layer)
 
 void WebImageLayer::setBitmap(SkBitmap bitmap)
 {
-    return unwrap<WebCore::ImageLayerChromium>()->setBitmap(bitmap);
+    unwrap<WebCore::ImageLayerChromium>()->setBitmap(bitmap);
 }
 
 } // namespace WebKit
