third_party/WebKit/Source/WebKit/chromium/src/WebLayer.cpp
@@ -188,7 +188,7 @@ bool WebLayer::masksToBounds() const
 void WebLayer::setMaskLayer(const WebLayer& maskLayer)
 {
     WebLayer ref = maskLayer;
-    return m_private->setMaskLayer(ref.unwrap<LayerChromium>());
+    m_private->setMaskLayer(ref.unwrap<LayerChromium>());
 }
 
 WebLayer WebLayer::maskLayer() const
